splash screen and viewmodels
Added a splash screen with an artificial delay
Added more stuff for viewmodels so I can start moving stuff soon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="number1">1</string>
     <string name="picture_of_recipient">Picture of recipient</string>
     <string name="firstname_lastname">FirstNameLastName</string>
+    <string name="gift_add_btn">add a new gift!</string>
 </resources>
